--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@langchain/core": "^0.3.58",
     "@langchain/groq": "^0.2.3",
+    "aws-sdk": "^2.1692.0",
     "axios": "^1.9.0",
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
@@ -28,10 +29,12 @@
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.24.0",
     "mongoose": "^8.15.2",
+    "p-limit": "^6.2.0",
     "sanitize-html": "^2.17.0",
     "tmp": "^0.2.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
-    "youtube-transcript": "^1.2.1"
+    "youtube-transcript": "^1.2.1",
+    "yt-dlp-exec": "^1.0.2"
   }
 }
