--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node scripts/install-yt-dlp.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.832.0",
     "@langchain/core": "^0.3.58",
     "@langchain/groq": "^0.2.3",
     "aws-sdk": "^2.1692.0",
@@ -24,6 +26,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "envalid": "^8.0.0",
+    "execa": "^9.6.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
     "fluent-ffmpeg": "^2.1.3",
