--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "youtube-transcript": "^1.2.1",
+    "yt-dlp-exec": "^1.0.2",
     "ytdl-core": "^4.11.5",
     "ytdl-core-discord": "^1.3.1"
   }
