--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.832.0",
+    "@aws-amplify/cli": "^13.0.1",
     "@langchain/core": "^0.3.58",
     "@langchain/groq": "^0.2.3",
     "axios": "^1.9.0",
@@ -30,9 +30,7 @@
     "fluent-ffmpeg": "^2.1.3",
     "groq-sdk": "^0.24.0",
     "mongoose": "^8.15.2",
-    "p-limit": "^6.2.0",
     "sanitize-html": "^2.17.0",
-    "serverless-http": "^3.2.0",
     "tmp": "^0.2.3",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
